new flake8 ignore

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,13 @@ ignore =
     D100,
     D205,
     D400,
-    W503
+    W503,
+    E203
 # D100 Missing docstring in public module
 # D205 1 blank line required between summary line and description
 # D400 First line should end with a period
-# W503 line break before binary operator (conflicts with black)
+# W503 Line break before binary operator (conflicts with black)
+# E203 Whitespace before ':' (conflicts with black)
 
 [isort]
 profile = black
